--- a/src/capteur_config.yaml
+++ b/src/capteur_config.yaml
@@ -1,9 +1,11 @@
 ultrason1:
   type: ultrason
-  x: 100
-  y: 100
+  x: 100 # position suivant x en mm
+  y: 100 # position suivant y en mm
+  angle: 50 #angle en degrès
 
 ultrason2:
   type: ultrason
   x: -100
   y: 100
+  angle: 160
