--- a/src/capteur_config.yaml
+++ b/src/capteur_config.yaml
@@ -2,10 +2,10 @@ ultrason1:
   type: ultrason
   x: 20 # position suivant x en mm
   y: 50 # position suivant y en mm
-  angle: -30 #angle en degrès
+  theta: -30 #angle en degrès
 
 ultrason2:
   type: ultrason
   x: -30 # position suivant x en mm
   y: -50 # position suivant y en mm
-  angle: -190 #angle en degrès
+  theta: -190 #angle en degrès
