--- a/src/robot_config.yaml
+++ b/src/robot_config.yaml
@@ -29,22 +29,28 @@ capteurs:
     type: ultrason
     x: 20 # position suivant x en mm
     y: 50 # position suivant y en mm
-    theta: 0 #angle en degrès
+    theta: -40 #angle en degrès
 
-  ultrason4:
+  ultrason2:
     type: ultrason
     x: -20 # position suivant x en mm
     y: 50 # position suivant y en mm
     theta: 30 #angle en degrès
 
-  ultrason2:
+  ultrason3:
     type: ultrason
     x: -30 # position suivant x en mm
     y: -50 # position suivant y en mm
     theta: -190 #angle en degrès
 
-  ultrason3:
+  ultrason4:
     type: ultrason
     x: +30 # position suivant x en mm
     y: -50 # position suivant y en mm
     theta: 190 #angle en degrès
+
+  ultrason5:
+    type: ultrason
+    x: 160 # position suivant x en mm
+    y: 0 # position suivant y en mm
+    theta: -90 #angle en degrès
