some comment and precision

--- a/src/robot_config.yaml
+++ b/src/robot_config.yaml
@@ -1,4 +1,4 @@
-point_robot:
+point_robot:  # Création des différents points pour former le robot
   p1:
     x: -150
     y: 50
@@ -24,12 +24,13 @@ point_robot:
     x: -150
     y: -50
 
+# Défiition des capteurs
 capteurs:
   ultrason1:
     type: ultrason
     x: 20 # position suivant x en mm
     y: 50 # position suivant y en mm
-    theta: -40 #angle en degrès
+    theta: -40 #angle en degrès d'inclinaison du capteur par rapport au sens de marche du robot
 
   ultrason2:
     type: ultrason
