--- a/src/robot_config.yaml
+++ b/src/robot_config.yaml
@@ -30,7 +30,7 @@ capteurs:
     type: ultrason
     x: 20 # position suivant x en mm
     y: 50 # position suivant y en mm
-    theta: -40 #angle en degrès d'inclinaison du capteur par rapport au sens de marche du robot
+    theta: 0 #angle en degrès d'inclinaison du capteur par rapport au sens de marche du robot
 
   ultrason2:
     type: ultrason
@@ -39,10 +39,10 @@ capteurs:
     theta: 30 #angle en degrès
 
   ultrason3:
-    type: ultrason
-    x: -30 # position suivant x en mm
-    y: -50 # position suivant y en mm
-    theta: -190 #angle en degrès
+    type: laser
+    x: 80 # position suivant x en mm
+    y: 50 # position suivant y en mm
+    theta: 0 #angle en degrès
 
   ultrason4:
     type: ultrason
