--- a/.gitignore
+++ b/.gitignore
@@ -141,5 +141,5 @@ src/__pycache__/
 images/*.drawio
 
 .vscode/
-src/v1.1 - Obstacle_visualisator.zip
-src/v1.1 - Obstacle_visualisator/*
+src/v* - Obstacle_visualisator.zip
+src/v* - Obstacle_visualisator/*
