--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,4 @@ images/*.drawio
 src/v* - Obstacle_visualisator.zip
 src/v* - Obstacle_visualisator/*
 v* - Obstacle_visualisator/*
+v* - Obstacle_visualisator.zip
